# dataapi

./: .env  Dockerfile  README.md  docker-compose.local.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  tox.ini
dataapi/: __init__.py  config.py  main.py  utils.py
dataapi/controllers/: consent_controller.py  dialog_controller.py
dataapi/models/: dialog.py  dialog_model.py
dataapi/routers/: consent_router.py  data.py  data_router.py
dataapi/services/: database.py  mongodb.py
scripts/: generate_data.py
tests/: test_base.py  test_consent_router.py  test_data_router.py  test_main.py  test_routers_data.py
