[tool.poetry]
name = "dataapi"
version = "0.1.0"
description = "DataAPI"
authors = ["zsltg"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pylint = "^2.11.1"
black = "^21.10b0"
mypy = "^0.910"
mutmut = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
